syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package simple;

// Test
service Test {
    option deprecated = true;

    // Unary
    rpc Unary (google.protobuf.Empty) returns (google.protobuf.Empty) {
        option deprecated = true;
    }
    // Server Streaming
    rpc ServerStreaming (TestMessage) returns (stream TestMessage) {}
    // Client Streaming
    rpc ClientStreaming (stream TestMessage) returns (TestMessage) {}
    // Bidi Streaming
    rpc BidiStreaming (stream TestMessage) returns (stream TestMessage) {}
}

message TestMessage {
    google.protobuf.Timestamp timestamp = 1;
}
